# rust-cpp-ffi-demo

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  main.cpp
include/: cpp_to_rust.h  rust_to_cpp.h
src/: call_cpp.rs  call_rust.cpp  cpp_to_rust.rs  lib.rs  main.rs  rust_to_cpp.rs
src/cpp/: to_rust.cpp
src/cpp_to_rust/: call_cpp.rs  main.rs
src/rust_to_cpp/: to_cpp.rs
